# omniswitch

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  go.mod  go.sum  rename.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
cmd/agentctl/: main.go
cmd/gateway/: main.go  main_test.go
cmd/omniswitch/: main.go
cmd/proxy/: main.go  main_test.go
cmd/sentinel/: main.go
deploy/kubernetes/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  redis.yaml  secret.example.yaml  service.yaml
docs/: API.md  CONFIGURATION.md  DEPLOYMENT.md  PORTKEY_COMPARISON.md  architecture.md  standard.md
examples/: gateway-config.yaml
examples/requests/: delete-prod.json  delete-staging.json  mcp-delete-prod.json
internal/admin/: admin.go  admin_test.go
internal/audit/: audit.go  audit_test.go  store_logger.go
internal/cache/: cache.go  cache_test.go  sqlite.go
internal/cli/: cli.go  cli_test.go
internal/dashboard/: dashboard.go  dashboard_test.go
internal/eval/: eval.go  eval_test.go
internal/explain/: explain.go  explain_test.go
internal/feedback/: feedback.go  feedback_test.go
internal/gateway/: a2a.go  authorization.go  compat.go  embeddings.go  (+10 more)
pkg/: README.md
policies/: finance-github.cel  postgres-drop-table.cel  production-delete.cel  production-delete.yaml
sdk/python/: README.md  omniswitch.py  pyproject.toml  sentinel.py
(+54 files in other folders)
