[project]
name = "sentinel-ai"
version = "0.1.0"
description = "Python SDK for the Sentinel AI Gateway - route, cache, guard, and observe LLM traffic"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0",
]

[project.urls]
Homepage = "https://github.com/onlychirag/sentinel-ai-gateway"
Repository = "https://github.com/onlychirag/sentinel-ai-gateway"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["sentinel"]
